2004-10-29  Adam Fedor  <fedor@gnu.org>

	* Documentation/README.Cygwin: Updated
	* Documentation/README.Darwin: Minor update
	* Documentation/gnustep.init: Add navigation tags back

2004-10-18  Adam Fedor  <fedor@gnu.org>

	* Documentation/README.MinGW: Mention Windows installer. Update links
	* Documentation/gnustep-howto.texi: Some setup no longer needed.
	* Documentation/gnustep.init: Don't add links - currently not 
	referenced correctly.
	* Documentation/machines.texi: Add compilers section.

	* Instance/tool.make: Fix a typo.

2004-09-07  Adam Fedor  <fedor@gnu.org>

	* Version 1.10.0

Tue Sep  7 12:48:31 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* target.make (SHARED_LIB_LINK_CMD): Removed -prebind flag.

2004-09-06  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Don't reset LIB_DIR.

2004-09-03  Adam Fedor  <fedor@gnu.org>

	* Add missing GNUsteprc.in

Fri Sep  3 21:52:00 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Recognize --with-user-root option and store
	the configuration into the system GNUsteprc.
	* configure: Regenerated.
	* GNUsteprc.in: New file.
	* GNUmakefile.in (install): Install the system GNUsteprc into
	GNUSTEP_SYSTEM_ROOT.  (uninstall): Uninstall the same file.
	(distclean): Remove GNUsteprc.
	* user_home.c: Do not segfault if the environment variable
	GNUSTEP_SYSTEM_ROOT is not set when the tool is executed.
	
Thu Sep 02 17:01:11 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* tar-exclude-list: New file currently containing CVS and .svn.
	* GNUmakefile.in: Install the new file.
	* Instance/Shared/bundle.make: Modified TAR commands to exclude
	files listed in the tar-exclude-list file.
	* Instance/framework.make: Same changes.
	* Instance/gswbundle.make: Same changes.
	* Instance/Documentation/autogsdoc.make: Same changes.
	* Instance/Documentation/javadoc.make: Same changes.
	* Instance/Documentation/latex.make: Same changes.
	
Tue Aug 31 16:21:41 2004  Nicola Pero  <n.pero@mi.flashnet.it>
